@@ -34,6 +34,7 @@ import static com.google.common.collect.Iterables.filter;
 import static com.google.common.collect.Iterables.transform;
 import static java.lang.Math.max;
 import static java.lang.Math.min;
+import static java.util.Comparator.naturalOrder;
 
 public class BTree
 {
@@ -57,18 +58,38 @@ public class BTree
 
     // The maximum fan factor used for B-Trees
     static final int FAN_SHIFT;
+    // The maximum tree depth
+    static final int MAX_DEPTH = 20; // When fanfator is minimal 2, the highest btree it builds is 20
+    // The maximun tree size for certain heigth of tree
+    static final int[] TREE_SIZE = new int[MAX_DEPTH];
+
+    // NB we encode Path indexes as Bytes, so this needs to be less than Byte.MAX_VALUE / 2
+    static final int FAN_FACTOR;
     static
     {
         int fanfactor = 32;
         if (System.getProperty("cassandra.btree.fanfactor") != null)
             fanfactor = Integer.parseInt(System.getProperty("cassandra.btree.fanfactor"));
+        assert fanfactor >= 2 : "the minimal btree fanfactor is 2";
         int shift = 1;
         while (1 << shift < fanfactor)
             shift += 1;
         FAN_SHIFT = shift;
+        FAN_FACTOR = 1 << FAN_SHIFT;
+
+        for (int i = 1; i < MAX_DEPTH; i++)
+        {
+            // each tree could have (FAN_FACTOR + 1) children, each child has TREE_SIZE[i - 1] values
+            // plus current node could have FAN_FACTOR number of values
+            TREE_SIZE[i] = TREE_SIZE[i - 1] * (FAN_FACTOR + 1) + FAN_FACTOR;
+            if (TREE_SIZE[i] <= 0) // Overflow
+            {
+                TREE_SIZE[i] = Integer.MAX_VALUE;
+                break;
+            }
+        }
     }
-    // NB we encode Path indexes as Bytes, so this needs to be less than Byte.MAX_VALUE / 2
-    static final int FAN_FACTOR = 1 << FAN_SHIFT;
+
 
     static final int MINIMAL_NODE_SIZE = FAN_FACTOR >> 1;
 
@@ -102,11 +123,6 @@ public class BTree
         return buildInternal(source, source.size(), updateF);
     }
 
-    public static <C, K extends C, V extends C> Object[] build(Iterable<K> source, UpdateFunction<K, V> updateF)
-    {
-        return buildInternal(source, -1, updateF);
-    }
-
     /**
      * Creates a BTree containing all of the objects in the provided collection
      *
@@ -121,32 +137,77 @@ public class BTree
         return buildInternal(source, size, updateF);
     }
 
-    /**
-     * As build(), except:
-     * @param size    < 0 if size is unknown
-     */
-    private static <C, K extends C, V extends C> Object[] buildInternal(Iterable<K> source, int size, UpdateFunction<K, V> updateF)
+    private static <C, K extends C, V extends C> Object[] buildLeaf(Iterator<K> it, int size, UpdateFunction<K, V> updateF)
     {
-        if ((size >= 0) & (size < FAN_FACTOR))
+        V[] values = (V[]) new Object[size | 1];
+
+        for (int i = 0; i < size; i++)
         {
-            if (size == 0)
-                return EMPTY_LEAF;
-            // pad to odd length to match contract that all leaf nodes are odd
-            V[] values = (V[]) new Object[size | 1];
-            {
-                int i = 0;
-                for (K k : source)
-                    values[i++] = updateF.apply(k);
-            }
-            if (updateF != UpdateFunction.noOp())
-                updateF.allocated(ObjectSizes.sizeOfArray(values));
-            return values;
+            K k = it.next();
+            values[i] = updateF.apply(k);
+        }
+        if (updateF != UpdateFunction.noOp())
+            updateF.allocated(ObjectSizes.sizeOfArray(values));
+        return values;
+    }
+
+    private static <C, K extends C, V extends C> Object[] buildInternal(Iterator<K> it, int size, int level, UpdateFunction<K, V> updateF)
+    {
+        assert size > 0;
+        assert level > 0;
+        if (level == 1)
+            return buildLeaf(it, size, updateF);
+
+        // build branch node
+        int childSize = TREE_SIZE[level - 1];
+        int childrenNum = size / (childSize + 1) + 1;
+
+        V[] values = (V[]) new Object[childrenNum * 2];
+        if (updateF != UpdateFunction.noOp())
+            updateF.allocated(ObjectSizes.sizeOfArray(values));
+
+        int[] indexOffsets = new int[childrenNum];
+        int left = size;
+        int childPos = childrenNum - 1;
+
+        // Build children nodes with full BTree size except the last 2 nodes
+        for (int i = 0; i < childrenNum - 2; i++)
+        {
+            // Build the tree with inorder traversal
+            values[childPos + i] = (V) buildInternal(it, childSize, level - 1, updateF);
+            left -= childSize;
+            indexOffsets[i] = size - left;
+
+            K k = it.next();
+            values[i] = updateF.apply(k);
+            left--;
         }
 
-        TreeBuilder builder = TreeBuilder.newInstance();
-        Object[] btree = builder.build(source, updateF, size);
+        // Split the remaining values to the last 2 nodes
+        values[childPos + childrenNum - 2] = (V) buildInternal(it, left / 2, level - 1, updateF);
+        values[childrenNum - 2] = updateF.apply(it.next());
+        values[childPos + childrenNum - 1] = (V) buildInternal(it, (left - 1) / 2, level - 1, updateF);
 
-        return btree;
+        indexOffsets[childrenNum - 2] = size - ((left + 1) / 2);
+        indexOffsets[childrenNum - 1] = size;
+
+        values[childPos + childrenNum] = (V) indexOffsets;
+
+        return values;
+    }
+
+    private static <C, K extends C, V extends C> Object[] buildInternal(Iterable<K> source, int size, UpdateFunction<K, V> updateF)
+    {
+        assert size >= 0;
+        if (size == 0)
+            return EMPTY_LEAF;
+
+        // find out the height of the tree
+        int level = 1;
+        while (size > TREE_SIZE[level])
+            level++;
+        Iterator<K> it = source.iterator();
+        return buildInternal(it, size, level, updateF);
     }
 
     public static <C, K extends C, V extends C> Object[] update(Object[] btree,
@@ -692,7 +753,11 @@ public class BTree
         remainder = filter(transform(remainder, function), (x) -> x != null);
         Iterable<V> build = concat(head, remainder);
 
-        return buildInternal(build, -1, UpdateFunction.<V>noOp());
+        Builder<V> builder = builder((Comparator<? super V>) naturalOrder());
+        builder.auto(false);
+        for (V v : build)
+            builder.add(v);
+        return builder.build();
     }
 
     private static <V> Object[] transformAndFilter(Object[] btree, FiltrationTracker<V> function)
