@@ -1,4 +1,5 @@
 4.0
+ * Improve BTree build performance by avoiding data copy (CASSANDRA-9989)
  * Make AsyncOneResponse use the correct timeout (CASSANDRA-14509)
  * Add option to sanity check tombstones on reads/compactions (CASSANDRA-14467)
  * Add a virtual table to expose all running sstable tasks (CASSANDRA-14457)
